@@ -1,4 +1,5 @@
 2016-01-06 David Hohn <david.hohn@cern.ch>
+	* add config file for running Systematics: tighten object selection to strawman, add skim
 	* add systematic variations of btag SF and PU event weights, only stored in nominal Tree
 	* working on slimming systematic trees: no truth
 
